<resources>
    <string name="app_name">ProjekTAKripto</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_halaman_utama">Halaman Utama</string>
    <string name="menu_ganti_password">Ganti Password</string>
    <string name="menu_penyimpanan">Penyimpanan</string>
    <string name="menu_tentangaplikasi">Tentang Aplikasi</string>
    <string name="menu_keluar">Keluar</string>
    <string name="nama_aplikasi">Aplikasi Penyimpanan Dokumen Online Terenkripsi</string>
    <string name="nama_pembimbing_1">Julian Supardi, M.T.</string>
    <string name="nama_pembimbing_2">Osvari Arsalan, S.Kom., M.T</string>
    <string name="nama_mahasiswa">M. Aldi Ariqi</string>
    <string name="intro_aplikasi">Aplikasi ini merupakan aplikasi penyimpanan file dokumen online terenkripsi yang dibuat untuk penyusunan tugas akhir di Jurusan Teknik Informatika dengan Topik Kriptografi Menggunakan Metode Hybrid Cryptosystem Blowfish dan RSA(Rivest Shamir Adleman)</string>

    <string name="dialog_hapus_file">File yang Sudah Dihapus Tidak Bisa Dikembalikan</string>
    <string name="dialog_keluar">Sebelum Melakukan Log Out Pastikan File yang Disimpan Sudah di Unduh Semua</string>

    <string name="nav_header_username">Username : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>