<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_bottom_5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_halaman_utama"
            android:icon="@drawable/iconhouse"
            android:title="@string/menu_halaman_utama" />
    </group>

    <group
        android:id="@+id/menu_bottom_4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_penyimpanan"
            android:icon="@drawable/iconfiles"
            android:title="@string/menu_penyimpanan" />
    </group>

    <group
        android:id="@+id/menu_bottom_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tentangaplikasi"
            android:icon="@drawable/iconabout"
            android:title="@string/menu_tentangaplikasi" />
    </group>

    <group
        android:id="@+id/menu_bottom_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ganti_password"
            android:icon="@drawable/iconkey"
            android:title="@string/menu_ganti_password" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_keluar"
            android:icon="@drawable/iconexit"
            android:title="@string/menu_keluar"/>
    </group>
</menu>