<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_halaman_utama">

    <fragment
        android:id="@+id/nav_halaman_utama"
        android:name="com.example.projektakripto.ui.home.HomeFragment"
        android:label="@string/menu_halaman_utama"
        tools:layout="@layout/fragment_halaman_utama" >
        <action
            android:id="@+id/action_nav_halaman_utama_to_nav_tentangaplikasi"
            app:destination="@id/nav_tentangaplikasi" />
        <action
            android:id="@+id/action_nav_halaman_utama_to_nav_penyimpanan"
            app:destination="@id/nav_penyimpanan" />
        <action
            android:id="@+id/action_nav_halaman_utama_to_nav_ganti_password"
            app:destination="@id/nav_ganti_password" />
    </fragment>

    <fragment
        android:id="@+id/nav_penyimpanan"
        android:name="com.example.projektakripto.ui.penyimpanan.PenyimpananFragment"
        android:label="@string/menu_penyimpanan"
        tools:layout="@layout/penyimpanan_fragment" />

    <fragment
        android:id="@+id/nav_tentangaplikasi"
        android:name="com.example.projektakripto.ui.tentangaplikasi.TentangAplikasiFragment"
        android:label="@string/menu_tentangaplikasi"
        tools:layout="@layout/tentang_aplikasi_fragment" />

    <fragment
        android:id="@+id/nav_ganti_password"
        android:name="com.example.projektakripto.ui.gantipassword.GantiPasswordFragment"
        android:label="@string/menu_ganti_password"
        tools:layout="@layout/ganti_password_fragment" />
</navigation>